force-app/main/default/objects/Token__c/fields/ConsumerSecret__c.field-meta.xml
<CustomField>
    <fullName>ConsumerSecret__c</fullName>
    <label>ConsumerSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>