force-app/main/default/objects/Token__c/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <inlineHelpText>Timestamp for token expiration</inlineHelpText>
    <label>Expires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>